src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.section {
  height: 100vh;
}

/*Home*/
.bounce {
  animation-name: bounce;
  animation-duration: 2s;
  animation-fill-mode: both;
}

@keyframes bounce {
  0% {
    transform: translateY(-150%);
  }

  60% {
    transform: translateY(50%);
  }

  100% {
    transform: translateY(0);
  }
}

/*NavBar */

.navbar {
  width: 25%;
  height: 75px;
  position: fixed;
  top: 0;
  z-index: 9999;
  display: flex;
  height: 70px;
  align-items: center;
  justify-content: center;
  text-decoration: none;
  font-weight: 450;
  font-size: 35px;
  left: 50%;
  /* center the menu horizontally */
  transform: translateX(-50%);
  /* center the menu horizontally */
}

.navbar-icons {
  size: 200px;
  padding-right: 40px;
  padding-left: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.navbar-icons.active {
  transform: scale(1.5);
  transform-origin: center;
  transition: transform 0.3s ease-in-out;
}

.navbar-icons a:visited {
  color: whitesmoke !important;
  /* set the color of the icons to black even when visited */
}

.fade-left {
  -webkit-animation: fade-left 2.2s both;
  /* Safari 4+ */
  -moz-animation: fade-left 2.2s both;
  /* Fx 5+ */
  -o-animation: fade-left 2.2s both;
  /* Opera 12+ */
  animation: fade-left 2.2s both;
  /* IE 10+, Fx 29+ */
}

@-webkit-keyframes fade-left {
  0% {
    opacity: 0;
    -webkit-transform: translateX(-50px);
  }

  100% {
    opacity: 1;
    -webkit-transform: translateX(0);
  }
}

/* Fx 5+ */
@-moz-keyframes fade-left {
  0% {
    opacity: 0;
    -moz-transform: translateX(-50px);
  }

  100% {
    opacity: 1;
    -moz-transform: translateX(0);
  }
}

/* Opera 12+ */
@-o-keyframes fade-left {
  0% {
    opacity: 0;
    -o-transform: translateX(-50px);
  }

  100% {
    opacity: 1;
    -o-transform: translateX(0);
  }
}

/* IE 10+, Fx 29+ */
@keyframes fade-left {
  0% {
    opacity: 0;
    transform: translateX(-50px);
  }

  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

.fade-top {
  -webkit-animation: fade-top 2.2s both;
  /* Safari 4+ */
  -moz-animation: fade-top 2.2s both;
  /* Fx 5+ */
  -o-animation: fade-top 2.2s both;
  /* Opera 12+ */
  animation: fade-top 2.2s both;
  /* IE 10+, Fx 29+ */
}

@-webkit-keyframes fade-top {
  0% {
    opacity: 0;
    -webkit-transform: translateY(-50px);
  }

  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
  }
}

@-moz-keyframes fade-top {
  0% {
    opacity: 0;
    -moz-transform: translateY(-50px);
  }

  100% {
    opacity: 1;
    -moz-transform: translateY(0);
  }
}

@-o-keyframes fade-top {
  0% {
    opacity: 0;
    -o-transform: translateY(-50px);
  }

  100% {
    opacity: 1;
    -o-transform: translateY(0);
  }
}

@keyframes fade-top {
  0% {
    opacity: 0;
    transform: translateY(-50px);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.fade-right {
  -webkit-animation: fade-right 2.2s both;
  /* Safari 4+ */
  -moz-animation: fade-right 2.2s both;
  /* Fx 5+ */
  -o-animation: fade-right 2.2s both;
  /* Opera 12+ */
  animation: fade-right 2.2s both;
  /* IE 10+, Fx 29+ */
}

@-webkit-keyframes fade-right {
  0% {
    opacity: 0;
    -webkit-transform: translateX(50px);
  }

  100% {
    opacity: 1;
    -webkit-transform: translateX(0);
  }
}

@-moz-keyframes fade-right {
  0% {
    opacity: 0;
    -moz-transform: translateX(50px);
  }

  100% {
    opacity: 1;
    -moz-transform: translateX(0);
  }
}

@-o-keyframes fade-right {
  0% {
    opacity: 0;
    -o-transform: translateX(50px);
  }

  100% {
    opacity: 1;
    -o-transform: translateX(0);
  }
}

@keyframes fade-right {
  0% {
    opacity: 0;
    transform: translateX(50px);
  }

  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

.fade-bottom {
  -webkit-animation: fade-bottom 2.2s both;
  /* Safari 4+ */
  -moz-animation: fade-bottom 2.2s both;
  /* Fx 5+ */
  -o-animation: fade-bottom 2.2s both;
  /* Opera 12+ */
  animation: fade-bottom 2.2s both;
  /* IE 10+, Fx 29+ */
}

@-webkit-keyframes fade-bottom {
  0% {
    opacity: 0;
    -webkit-transform: translateY(50px);
  }

  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
  }
}

/* Fx 5+ */
@-moz-keyframes fade-bottom {
  0% {
    opacity: 0;
    -moz-transform: translateY(50px);
  }

  100% {
    opacity: 1;
    -moz-transform: translateY(0%);
  }
}

/* Opera 12+ */
@-o-keyframes fade-bottom {
  0% {
    opacity: 0;
    -o-transform: translateY(50px);
  }

  100% {
    opacity: 1;
    -o-transform: translateY(0);
  }
}

/* IE 10+, Fx 29+ */
@keyframes fade-bottom {
  0% {
    opacity: 0;
    transform: translateY(50px);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

